name:                astral-mining-server
version:             0.1.0.0
synopsis:            Adventure Game
-- description:         
homepage:            https://github.com/AstralMining/astral-mining-server
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          astral.mining.game@gmail.com
copyright:           Patrik Sandahl, 2015
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable astral-mining-server
  main-is:             AstralGameServer.hs
  other-modules:       OptCracker
                       , Api
                       , AstralState
                       , Flow
                       , UserRegistrationRecord
  build-depends:       base >=4.7 && <4.8
                       , acid-state >= 0.12.3 && <0.12.4
                       , aeson >= 0.8.0.2 && <0.8.1
                       , base64-bytestring >= 1.0.0.1 && <1.0.1
                       , bytestring >= 0.10.4 && <0.10.5
                       , containers >= 0.5.5.1 && <0.5.6
                       , hashable >= 1.2.3.1 && <1.2.4
                       , mtl >= 2.1.3.1 && <2.1.4
                       , safecopy >= 0.8.3 && <0.9
                       , snap-core >= 0.9.6.4 && <0.9.7
                       , snap-server >= 0.9.4.6 && <0.9.5
                       , random >= 1.1 && <1.2
                       , text >= 1.2.0.4 && <1.2.1
                       , transformers >= 0.3 && <0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded

test-suite astral-mining-server-tests
  type:                exitcode-stdio-1.0
  main-is:             TestMain.hs
  other-modules:       OptCrackerTests
                       , UserManagementTests
                       , ProgramExecutor
                       , RESTClient
  build-depends:       base >=4.7 && <4.8
                       , aeson >= 0.8.0.2 && <0.8.1
                       , base64-bytestring >= 1.0.0.1 && <1.0.1
                       , blaze-builder >= 0.3.3.4 && <0.3.4
                       , bytestring >= 0.10.4 && <0.10.5
                       , directory >= 1.2.1 && <1.3
                       , HUnit >= 1.2 && <1.3
                       , http-streams >= 0.7.2.4 && <0.7.3
                       , io-streams >= 1.2.1.1 && <1.2.3
                       , process >= 1.2 && <1.3
                       , text >= 1.2.0.4 && <1.2.1
                       , test-framework >= 0.8.1 && <0.9
                       , test-framework-hunit >= 0.3.0.1 && <0.3.1
  hs-source-dirs:      src, test
  default-language:    Haskell2010
  ghc-options:         -Wall